# fastapi-mongoengine

./: README.md  pyproject.toml
fastapi_mongoengine/: __init__.py  documents.py  modelform.py  transaction.py
fastapi_mongoengine/extend/: body.py  collection.py  document.py  pagination.py  queryset.py
tests/: conftest.py  model.py  test_crud.py
